added dynamic security settings for http cookies

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -4,13 +4,13 @@
     "icons": [
       {
         "src": "/jake.png",
-        "type": "image/svg+xml",
+        "type": "image/png",
         "sizes": "192x192",
         "purpose": "any"
       },
       {
         "src": "/jake.png",
-        "type": "image/svg+xml",
+        "type": "image/png",
         "sizes": "512x512",
         "purpose": "any"
       }
